# uhs_techno_economic_modelling

./: .gitignore  README.md  pyproject.toml
config/: financial.yaml  scenarios.yaml  technologies.yaml
scripts/: cost_rate_sensitivities.py  cost_rates.py  debug_compression_cost.py  debug_hgsm_design.py  debug_hgsm_physics.py  debug_salt_cavern_capex.py  debug_salt_cavern_design.py  injection_efficiency.py  lrc_test.py  pressure_constraints.py  pressure_swing_adsorption.py  run_model.py
src/: salt_cavern.py
src/uhs_costs/: constants.py
src/uhs_costs/analysis/: cost_rate_sensitivities.py  injection_efficiency.py  pressure_constraint.py  pressure_swing_adsorption.py
src/uhs_costs/cost_model/: abex.py  aquifer.py  assumptions.py  compressor_cost_estimation.py  cost_components.py  default_cost_assumptions.py  depleted_gas_field.py  financing.py  lined_rock_cavern.py  recipes.py  salt_cavern.py  subsurface_capex.py  surface_capex.py  surface_facilities.py  surface_opex.py
src/uhs_costs/cost_model/helpers/: abex.py  compressor_cost_estimation.py  cost_components.py  subsurface_capex.py  subsurface_opex.py  surface_capex.py  surface_opex.py
src/uhs_costs/design/: aquifer.py  default_design_assumptions.py  depleted_gas_field.py  lined_rock_cavern.py  project.py  salt_cavern.py  site_development.py  storage_flows.py  storage_inventory.py
src/uhs_costs/gas_properties/: hydrogen.py  methane.py
src/uhs_costs/old/: model.py  storage_capacity.py
tests/: test_compression.py  test_financing.py  test_hydrogen_properties.py  test_io.py  test_storage_capacity.py
(+7 files in other folders)
